--- a/education_experience.html
+++ b/education_experience.html
@@ -73,13 +73,13 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="about.html">Md Rahat Shahriar Zawad</a>
+    <a class="navbar-brand" href="index.html">Md Rahat Shahriar Zawad</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="about.html">Bio</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Bio</a></li>
         <li class="nav-item"><a class="nav-link" href="education_experience.html">Education & Experience</a></li>
         <li class="nav-item"><a class="nav-link" href="publications_projects.html">Publications & Projects</a></li>
       </ul>
