--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="about.html">Md Rahat Shahriar Zawad</a>
+    <a class="navbar-brand" href="index.html">Md Rahat Shahriar Zawad</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="about.html">Bio</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Bio</a></li>
         <li class="nav-item"><a class="nav-link" href="education_experience.html">Education & Experience</a></li>
         <li class="nav-item"><a class="nav-link" href="publications_projects.html">Publications & Projects</a></li>
       </ul>
