--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="row align-items-center">
       <!-- Left Column: Image, Name, Affiliation, and Social Links -->
       <div class="col-md-4 text-center">
-        <img src="https://media.licdn.com/dms/image/v2/C5603AQHpsdNpf76pDQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1643207060164?e=1735171200&v=beta&t=GARTr45KGeNKp5uy37hhN_eqAUjYghhoAkU3g-ig9gM" alt="Your Photo" id="profile-picture">
+        <img src="RahatPic.jpeg" alt="Your Photo" id="profile-picture">
         
         <h1>Md Rahat Shahriar Zawad</h1>
         <p class="department-text">MS Student (Computer Science)</p>
