--- a/education_experience.html
+++ b/education_experience.html
@@ -134,7 +134,7 @@
           <ul class="responsibilities">
             <li>Designed and implemented a fair feature selection strategy for Machine Learning in Healthcare. (Currently working on an optimized and complete version to submit in Journals) <a href="https://arxiv.org/pdf/2403.19165">ArXiv Link</a></li>
             <li>Assisted in building and redesigning a gamified website for collecting keystroke and mouse trace data for Parkinson’s detection. <a href="https://parkinsonsurvey.github.io/src/index.html">Website Link</a></li>
-            <li>Worked on building multimodal deep learning models incorporating Vision Transformer, Shifting Window Transformer, Densenet, Resnet, etc., to detect different stages of Parkinson’s disease from Mouse trace data. <a href="#">MedXiv Link</a></li>
+            <li>Worked on building multimodal deep learning models incorporating Vision Transformer, Shifting Window Transformer, Densenet, Resnet, etc., to detect different stages of Parkinson’s disease from Mouse trace data. <a href="https://www.medrxiv.org/content/10.1101/2024.10.27.24316195v1.full.pdf">MedrXiv Link</a></li>
             <li>Lead a co-design session with other researchers to design a gamified website for fair and remote Parkinson’s Detection.</li>
           </ul>
         </div>
@@ -148,7 +148,7 @@
           <p class="organization">Department of ICS, University of Hawaii at Manoa, Hawaii, USA</p>
           <ul class="responsibilities">
             <li>Assisted in teaching, grading, and management of Intro to Computer Science I (Fall 2024), Database Management System (Summer 2024), Intro to Computer Science II (Summer 2024), and Data Networks (Fall 2023 and Summer 2024) courses.</li>
-            <li>Conducted labs training students in JAVA programming (Intro to Computer Science I, Intro to Computer Science II, Database Management System).</li>
+            <li>Conducted lab sessions (Intro to Computer Science I, Intro to Computer Science II, Database Management System).</li>
             <li>Held office hours to guide and help students apart from class hours.</li>
           </ul>
         </div>
