--- a/publications_projects.html
+++ b/publications_projects.html
@@ -96,7 +96,7 @@
         <i class="fas fa-book"></i> 
         <strong>Deep Learning Prediction of Parkinson’s Disease using Remotely Collected Structured Mouse Trace Data.</strong> 
         Md Rahat Shahriar Zawad, Zerin Nasrin Tumpa, Lydia Sollis, Shubham Parab, Peter Washington. (NPJ Artificial Intelligence) 
-        <a href="#">MedArXiv Link</a>
+        <a href="https://www.medrxiv.org/content/10.1101/2024.10.27.24316195v1.full.pdf">MedrXiv Link</a>
       </li>
       
       <!-- 2024 Publication -->
