--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
           <div class="info-section">
             <h3>Research Interests</h3>
             <ul>
-              <li>Digital Health</li>
+              <li>Trustworthy AI</li>
               <li>Fair ML</li>
-              <li>AI in Healthcare</li>
-              <li>Wearable Sensor Data</li>
+              <li>Human Centered AI</li>
+              <li>Digital Health</li>
             </ul>
           </div>
 
