--- a/education_experience.html
+++ b/education_experience.html
@@ -101,7 +101,7 @@
           <p class="institution">MS in Computer Science, Hawaii, USA</p>
           <ul class="achievements">
             <li>Current CGPA: 3.86 / 4.00</li>
-            <li>Thesis: Ongoing</li>
+            <li>Thesis: Accessible Parkinson’s Disease Detection from a Gamified Website: Deep Learning Using Mouse Trace Data and Bias Mitigation. (Ongoing)</li>
             </ul>
         </div>
       </div>
@@ -161,7 +161,7 @@
           <h4>Research Fellow</h4>
           <p class="organization">DiversAsia Project, Jahangirnagar University, Bangladesh</p>
           <ul class="responsibilities">
-            <li>Assisted in literature review, analysis, and writing research papers, reports for a funded research study.</li>
+            <li>Assisted in literature review, analysis and writing research papers, reports for a funded research study targeted to create best policy and practices in creating inclusive higher education for students with disabilities.</li>
           </ul>
         </div>
       </div>
