--- a/publications_projects.html
+++ b/publications_projects.html
@@ -92,7 +92,7 @@
     <ul class="list-unstyled">
       <!-- In Review Publication -->
       <li>
-        <span class="badge-review">Submitted</span>
+        <span class="badge-review">Under Review</span>
         <i class="fas fa-book"></i> 
         <strong>Deep Learning Prediction of Parkinson’s Disease using Remotely Collected Structured Mouse Trace Data.</strong> 
         Md Rahat Shahriar Zawad, Zerin Nasrin Tumpa, Lydia Sollis, Shubham Parab, Peter Washington. (NPJ Artificial Intelligence) 
