--- a/education_experience.html
+++ b/education_experience.html
@@ -127,9 +127,9 @@
 
       <!-- Experience Entry 1 -->
       <div class="timeline-entry">
-        <span class="date-range">Jan 2024 - Continue</span>
+        <span class="date-range">Aug 2023 - Dec 2023, <br>Jan 2024 - Continue</span>
         <div class="timeline-content experience">
-          <h4>Graduate Research Assistant</h4>
+          <h4>Graduate Research Assistant / MS Student Researcher</h4>
           <p class="organization">Hawaii Digital Health Lab, University of Hawaii at Manoa, Hawaii, USA</p>
           <ul class="responsibilities">
             <li>Designed and implemented a fair feature selection strategy for Machine Learning in Healthcare. (Currently working on an optimized and complete version to submit in Journals) <a href="https://arxiv.org/pdf/2403.19165">ArXiv Link</a></li>
@@ -142,7 +142,7 @@
 
       <!-- Experience Entry 2 -->
       <div class="timeline-entry">
-        <span class="date-range">Aug 2023 - Dec 2023, May 2024 - Continue</span>
+        <span class="date-range">Aug 2023 - Dec 2023, <br>May 2024 - Continue</span>
         <div class="timeline-content experience">
           <h4>Graduate Teaching Assistant</h4>
           <p class="organization">Department of ICS, University of Hawaii at Manoa, Hawaii, USA</p>
